--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -40,7 +40,7 @@
     "react/react-in-jsx-scope": "off",
     "react/prop-types": 0,
     "import/no-unresolved": [2, { "caseSensitive": false }],
-    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx", ".ts", ".tsx", ".scss", "*.module.css"] }],
     "import/order": [
       2,
       {
@@ -59,7 +59,7 @@
   "settings": {
     "import/resolver": {
       "node": {
-        "extensions": [".js", ".jsx", ".ts", ".tsx"],
+        "extensions": [".js", ".jsx", ".ts", ".tsx", ".css", ".scss", "*.module.css"],
         "moduleDirectory": ["node_modules", "src/"]
       }
     },
