--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,12 @@
 {
     "cSpell.words": [
-        "Aviasales"
+        "Acrion",
+        "Aviasales",
+        "HHMM",
+        "linebreak",
+        "openfonts",
+        "reduxjs",
+        "ticekts"
     ],
     // "editor.defaultFormatter": "esbenp.prettier-vscode",
     // "[javascript, html]": {
