--- a/package.json
+++ b/package.json
@@ -3,12 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@openfonts/open-sans_cyrillic": "^1.44.2",
+    "@redux-devtools/extension": "^3.3.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
     "react-scripts": "5.0.1",
+    "react-top-loading-bar": "^2.3.1",
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0",
+    "sass": "^1.77.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -25,7 +32,10 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "rules": {
+      "ban-ts-comment": 0
+    }
   },
   "browserslist": {
     "production": [
